# slack-plays-pokemon

./: .env  .env.template  .flake8  .gitignore  Dockerfile  README.md  app-manifest.json  docker-compose.yml  main.py  pyboy_integration.py  pyproject.toml  readme.md  slack_bot.py  slack_event_handlers.py  state_manager.py
.github/: pull_request.yaml
.github/workflows/: pull_request.yaml
scratchpad/: update_inputs.py
scripts/: lint.py
src/: main.py
src/bot/: slack_bot.py  slack_event_handlers.py
src/integration/: byte_mappings.py  gen_1_pokemon.py  pyboy_integration.py
src/playback/: input_playback.py
src/state/: state_manager.py
tests/: test_gen_1_pokemon.py
