[tool.poetry]
name = "slack-plays-pokemon"
version = "0.1.0"
description = ""
authors = ["AyaPK <aya.pk.contact@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
pyboy = "^2.2.1"
python-dotenv = "^1.0.1"
slack-bolt = "^1.19.1"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
